# bsc_thesis

ch_experiment/: .gitignore  Cargo.toml  remote_run_dashboard.py  run_experiment.sh
ch_experiment/src/: andrews_monotone_chain.rs  convex_hull_algorithm.rs  experiment.rs  experiment_parameters.rs  main.rs  multithreaded_experiment.rs  random_disk_point_set.rs  random_point_set.rs  random_rectangle_point_set.rs
results_to_graph/: .gitignore  README.md  analysis_disk.py  analysis_rectangle.py  results_to_graph.py  results_to_graph_aggregated.py  results_to_loglog.py  results_to_semilog.py
