[package]
name = "ch_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
reqwest = { version = "0.12.15", features=["blocking"] }
uuid = { version = "1.16.0", features = ["v4"]}
